--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "electron-react-boilerplate",
-  "version": "4.6.0",
-  "description": "A foundation for scalable desktop apps",
-  "license": "MIT",
+  "name": "UltreonGameLauncher",
+  "version": "1.0.0",
+  "description": "Launcher for games by Ultreon",
+  "license": "Ultrteon-Api-1.1",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://github.com/electron-react-boilerplate"
+    "name": "Ultreon Team",
+    "email": "contact.ultreon@gmail.com",
+    "url": "https://github.com/Ultreon"
   },
   "main": "./dist/main/main.js",
   "scripts": {
