--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,17 @@ tauri-build = { version = "1.5.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.2", features = [ "window-minimize", "window-maximize", "window-hide", "window-close", "window-start-dragging", "window-unminimize", "window-unmaximize", "window-show"] }
+tauri = { version = "1.5.2", features = [ "window-minimize", "window-maximize", "window-hide", "window-close", "window-start-dragging", "window-unminimize", "window-unmaximize", "window-show", "dialog"] }
+msgbox = "0.7.0"
+zip = "0.6.6"
+
+[dependencies.uuid]
+version = "1.6.1"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
