--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,8 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.5.2", features = [ "window-minimize", "window-maximize", "window-hide", "window-close", "window-start-dragging", "window-unminimize", "window-unmaximize", "window-show", "dialog"] }
 msgbox = "0.7.0"
 zip = "0.6.6"
+anyhow = "1.0.75"
+thiserror = "1.0.50"
 
 [dependencies.uuid]
 version = "1.6.1"
