--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "app"
+name = "game-launcher"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "A launcher for games by Ultreon"
+authors = ["Ultreon", "XyperCode"]
 license = ""
-repository = ""
-default-run = "app"
+repository = "https://github.com/Ultreon/ultreon-game-launcher"
+default-run = "game-launcher"
 edition = "2021"
 rust-version = "1.60"
 
@@ -17,11 +17,16 @@ tauri-build = { version = "1.5.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.2", features = [ "window-minimize", "window-maximize", "window-hide", "window-close", "window-start-dragging", "window-unminimize", "window-unmaximize", "window-show", "dialog"] }
+tauri = { version = "1.5.2", features = [ "window-minimize", "window-maximize", "window-hide", "window-close", "window-start-dragging", "window-unminimize", "window-unmaximize", "window-show", "dialog" ] }
 msgbox = "0.7.0"
 zip = "0.6.6"
 anyhow = "1.0.75"
 thiserror = "1.0.50"
+reqwest = { version = "0.11.22", features = [ "blocking", "stream" ] }
+indicatif = "0.17.7"
+tokio = { version = "1.13.0", features = ["full"] }
+tokio-stream = "0.1.14"
+futures-util = "0.3.29"
 
 [dependencies.uuid]
 version = "1.6.1"
