--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,8 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.5.2", features = [ "window-minimize", "window-maximize", "window-hide", "window-close", "window-start-dragging", "window-unminimize", "window-unmaximize", "window-show", "dialog" ] }
 msgbox = "0.7.0"
 zip = "0.6.6"
+flate2 = "1.0"
+tar = "0.4"
 anyhow = "1.0.75"
 thiserror = "1.0.50"
 reqwest = { version = "0.11.22", features = [ "blocking", "stream" ] }
