--- a/package.json
+++ b/package.json
@@ -11,24 +11,25 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@tauri-apps/api": "^1.5.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
-    "@tauri-apps/api": "^1.5.1",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "typescript": "^5.2.2",
-    "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
     "tailwindcss": "^3.3.0",
+    "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
 }
